fix: adjust logout button positioning so it shows on smaller desktop sizes

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -77,7 +77,9 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 30rem;
+    position: absolute;
+    width: 100%;
+    bottom: 4rem;
 }
 
 /* temporary logout button */
